--- a/style.css
+++ b/style.css
@@ -78,3 +78,12 @@ h1 {
   border-radius: 8px;
   padding: 8px;
 }
+
+.footer-thanks {
+  position: fixed;
+  width: 100%;
+  bottom: 20px;
+  text-align: center;
+  z-index: 10;
+  color: #fff;
+}
