--- a/style.css
+++ b/style.css
@@ -79,7 +79,11 @@ h1 {
   padding: 8px;
 }
 
-h3 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
+#gettemp {
+  background-color: #374244;
+  color: white;
+  padding: 0.5rem;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
